🐛 fix: ajuste wrapper e overflow da sidebar

--- a/public/assets/css/painel.css
+++ b/public/assets/css/painel.css
@@ -9,7 +9,8 @@ html {
 }
 
 #sidebar {
-  min-height:350px; width: 250px;
+  min-height: 350px; 
+  width: 250px;
 }
 
 .navbar-toggler {
